tests/golden/err-ambiguous-sibling/expected_error.txt
error: `./ui` はファイル `ui.clum` とサブディレクトリ `ui/` の両方に一致します
 --> ./_.clum:1:2
  |
1 | @./ui
  |  ^^^^ どちらかを改名して曖昧さを解消してください
